--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "hbs": "^4.1.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.11.8"
   }
